add scripts for easily updating server src straight from the decomp so i can build on src instead (and edit src for debugging)