@@ -2,10 +2,16 @@ plugins {
     id("java")
     id("com.gradleup.shadow") version "9.4.0"
     id("eclipse")
+    id("application")
 }
 
 group = "dev.twunk"
 version = "0.1.0"
+
+application {
+    mainClass = "com.hypixel.hytale.Main"
+    mainModule = "com.hypixel.hytale"
+}
 
 repositories {
     mavenCentral()
@@ -36,10 +42,42 @@ tasks.test {
     useJUnitPlatform()
 }
 
-tasks.shadowJar {
-    archiveClassifier.set("") // replace normal jar
-}
+tasks {
+    val ENABLE_PREVIEW = "--enable-preview"
 
-tasks.build {
-    dependsOn(tasks.shadowJar)
+    // In our project we have the tasks compileJava and
+    // compileTestJava that need to have the
+    // --enable-preview compiler arguments.
+    withType<JavaCompile>() {
+        options.compilerArgs.add(ENABLE_PREVIEW)
+        // Optionally we can show which preview feature we use.
+        // options.compilerArgs.add("-Xlint:preview")
+
+        // Explicitly setting compiler option --release
+        // is needed when we wouldn't set the
+        // sourceCompatiblity and targetCompatibility
+        // properties of the Java plugin extension.
+        options.release.set(26)
+    }
+    // Test tasks need to have the JVM argument --enable-preview.
+    withType<Test>() {
+        useJUnitPlatform()
+        jvmArgs.add(ENABLE_PREVIEW)
+    }
+    // JavaExec tasks need to have the JVM argument --enable-preview.
+    withType<JavaExec>() {
+        jvmArgs.add(ENABLE_PREVIEW)
+    }
+
+    // test {
+    //     useJUnitPlatform()
+    // }
+
+    shadowJar {
+        archiveClassifier.set("") // replace normal jar
+    }
+
+    build {
+        dependsOn(shadowJar)
+    }
 }
